sdk_tests/tests/pbc_contract_codegen/fail/shortname_bad_too_damned_long.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/shortname_bad_too_damned_long.rs:7:1
  |
7 | #[action(shortname = 0x9090909090909090909000)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid shortname, expecting a u32 hex literal: Error("number too large to fit in target type")
